--- a/css/reset.css
+++ b/css/reset.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
-@import url('https://fonts.googleapis.com/css2?family=Geologica:wght@400;500;600&family=Nanum+Gothic:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Geologica:wght@400;500;600&family=Goldman:wght@400;700&family=Nanum+Gothic:wght@400;700&display=swap');
 /* font-family: 'Geologica', sans-serif;
+font-family: 'Goldman', cursive;
 font-family: 'Nanum Gothic', sans-serif; */
 * {
     margin: 0;
@@ -10,6 +11,8 @@ font-family: 'Nanum Gothic', sans-serif; */
 
 /* 폰트 스타일 설정 */
 .en {font-family: 'Geologica', sans-serif; font-weight: 500;}
+.en_s {font-family: 'Goldman', cursive;}
+
 
 /* 폰트 초기화 */
 body,input,textarea,select,button,table {
